# LLMEvo_Eval

./: .gitignore  LICENSE  Qwen_Qwen3-30B-A3B_np20_nc8_simple.csv  Qwen_Qwen3-8B_np20_nc8_simple.csv  README.md  __init__.py  batch_run.sh  batch_run_tsp30.sh  batch_run_tsp30_tsp60_parallel.sh  batch_run_tsp60.sh  calculate_refinement_rate.py  main.py  pyproject.toml  requirements.txt  resseed_sim.py  test_parallel_config.py  test_parallel_evolution.py  test_performance.py  test_structure.py
.hydra/: config.yaml  hydra.yaml  overrides.yaml
config/: exp_grid.yaml
data/bin_packing/: OR3_dataset.pkl  convert_or3.py  or_dataset.py  weibull_dataset.pkl
data/tsp/: convert.py  tsp_30.tsp
evaluation/: __init__.py
evolve/: __init__.py  db.py  executor.py  loop.py
evolve_core/: __init__.py  db.py  loop.py
experiments/: __init__.py  batch_runner.py  run_experiment.py
kernelbench/: dataset.py  frameworks.py  prompt_constructor.py  utils.py
llm/: __init__.py  api.py  zero_shot_eval.py
llm/providers/: __init__.py  base.py  openai.py
llm_ops/: api.py  prompt.py  zero_shot_eval.py
notebooks/templates/: 01_data_exploration_template.md  02_algorithm_analysis_template.md
results/eval_logs/: eval_result_level_1_problem_1.txt  prompt_level_1_problem_1.txt  (+1 more)
scripts/: clean_logs.py  run_exp.py  wandb_logger.py
tasks/: __init__.py  base.py  bin_packing.py  codegen.py  dataset.py  gcolor.py  gemm_opt.py  generate_and_eval_single_sample.py  kernelopt.py  promptopt.py  symboreg_oscillator1.py  symboreg_oscillator2.py  tsp.py  utils.py
utils/: __init__.py  logging.py
(+5 files in other folders)
