[project]
name = "llmevo-eval"
version = "0.1.0"
description = "LLM-driven Evolutionary Optimization Framework"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "openai>=1.0",
    "anthropic>=0.34",
    "litellm>=1.71",
    "wandb>=0.19",
    "numpy>=2.0",
    "pandas>=2.0",
    "scikit-learn>=1.6",
    "PyYAML>=6.0",
    "python-dotenv>=1.0",
    "requests>=2.32",
    "hydra-core>=1.3",
    "omegaconf>=2.3",
    "torch>=2.5",
    "transformers>=4.52",
    "datasets>=3.6",
    "evaluate>=0.4",
    "typer>=0.15",
    "loguru>=0.7",
    "networkx>=3.4",
    "tiktoken>=0.7",
    "tqdm>=4.67",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
]

[tool.uv.sources]
# Optional: add alternative sources here if needed
